# dmidecode

./: CMakeLists.txt
